# PL-BERT-ID

./: .gitignore  dataloader.py  inference.ipynb  phonemize.py  preprocess.ipynb  pyproject.toml  requirements.txt  spacy_tokenizer.py  text_normalize.py  train.ipynb
Configs/: config.yml
converters/: Address.py  Cardinal.py  Date.py  Decimal.py  Digit.py  Electronic.py  Fraction.py  Letters.py  Measure.py  Money.py  Ordinal.py  Plain.py  Range.py  Roman.py  Telephone.py  Time.py  Verbatim.py
